# data-driven-legged-locomotion

./: .gitignore  CMakeLists.txt  Crowdsourcing.py  README.md  ServiceSet.py  StatePF.py  StateSpace.py  crowdsourcing.py  setup.py
common/: ServiceSet.py  StatePF.py
data_driven_legged_locomotion/: TDMPC_crowdsourcing.py  __main__.py  main.py  main_crowdsourcing_v1.py  main_hybrid.py  main_hybrid_architecture_test.py  main_pezzotto.py
data_driven_legged_locomotion/agents/: HybridTDMPC_service.py  tdmpc_service.py
data_driven_legged_locomotion/agents/h1_walk/: __init__.py
data_driven_legged_locomotion/agents/h1_walk/mujoco_mpc/: agent.py  services.py
data_driven_legged_locomotion/agents/pendulum/: LQRService.py  SwingUpService.py
data_driven_legged_locomotion/agents/tdmpc/: tdmpc2.py
data_driven_legged_locomotion/agents/tdmpc/common/: world_model.py
data_driven_legged_locomotion/agents/tdmpc/config/: config.yaml
data_driven_legged_locomotion/common/: Crowdsourcing.py  Environment.py  ServiceSet.py  StatePF.py  StateSpace.py  __init__.py
data_driven_legged_locomotion/maps/: __init__.py
data_driven_legged_locomotion/maps/h1_walk/: __init__.py  living_room.py  map.py
data_driven_legged_locomotion/maps/h1_walk/obstacles/door/: door.xml  material.mtl
data_driven_legged_locomotion/tasks/h1_walk/: __init__.py  cost_test.py  h1_walk.py  h1_walk_costs.py  h1_walk_environment.py
data_driven_legged_locomotion/tasks/pendulum/: __init__.py  pendulum.py
data_driven_legged_locomotion/utils/: GlobalPlanner.py  __init__.py  mujoco_spec.py  plots.ipynb  quaternions.py
recyclebin/: main.py  main_crowdsourcing_v1.py  main_pezzotto.py
